# google-tag-manager-controller

./: .gitignore  README.md  pyproject.toml  requirements.txt
project/: account.py  container.py  demo_create.py  demo_show.py  gtm_base.py  gtm_controller.py  gtm_creator.py  gtm_scanner.py  main.py  reset_auth.py  reset_creds.py  run_creator.py  run_scanner.py  service.py  sheets.py  tag.py  test.py  test2.py  trigger.py  variable.py  version.py  workspace.py
