[tool.poetry]
name = "google-tag-manager-controller"
version = "0.1.0"
description = ""
authors = ["Krzysztof Olszewski <hello@retryjon.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typed-ast = "^1.5.5"
regex = "^2024.5.15"
black = "^24.4.2"
google-api-python-client = "^2.137.0"
oauth2client = "^4.1.3"
python-decouple = "^3.8"
six = "^1.16.0"
httplib2 = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
